TimeEntry/src/objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>Add_to_existing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add this task to all existing projects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Hourly_Rate__c</fullName>
        <label>Default Hourly Rate $</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>This task is billable by default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_common_task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is common task(Added to future projects)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>